<resources>
    <string name="app_name">Did My Shit Sell?</string>
    <string name="app_blurb">A Marketplace App for GW2</string>

    <string name="save">Save</string>
    <string name="cancel">Cancel</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_refresh">Refresh</string>

    <string name="navigate_listings">My Listings</string>
    <string name="navigate_history">Recent History</string>
    <string name="navigate_settings">Settings</string>

    <string name="settings_api_key_title">Current API Key</string>
    <string name="settings_edit_api_key_hint">Enter New API Key</string>
    <string name="settings_button_edit_api_key">Edit API Key</string>
</resources>
