<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView android:text="@string/settings_api_key_title"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textSize="@dimen/text_large"
        android:textAlignment="center"
        android:layout_margin="@dimen/fab_margin" />

    <FrameLayout android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginBottom="@dimen/fab_margin">

        <TextView android:id="@+id/settings_current_api_key"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_medium"
            tools:text="MY API KEY" />

        <EditText android:id="@+id/settings_edit_api_key"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textSize="@dimen/text_medium"
            android:hint="@string/settings_edit_api_key_hint"
            android:visibility="gone" />


    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button android:id="@+id/settings_button_edit_api_key"
            android:text="@string/settings_button_edit_api_key"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout android:id="@+id/settings_buttons_save_cancel"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <Button android:id="@+id/settings_button_edit_key_cancel"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/cancel" />

            <Button android:id="@+id/settings_button_edit_key_save"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/save" />

        </LinearLayout>

    </FrameLayout>

</LinearLayout>