<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group>
        <item
            android:id="@+id/nav_listings"
            android:icon="@android:drawable/ic_menu_compass"
            android:title="@string/navigate_listings"/>
        <item
            android:id="@+id/nav_history"
            android:icon="@android:drawable/ic_menu_recent_history"
            android:title="@string/navigate_history"/>
    </group>

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_settings"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/navigate_settings"/>
        <!--<item android:id="@+id/nav_gallery" android:icon="@android:drawable/ic_menu_gallery"-->
        <!--android:title="Gallery" />-->
        <!--<item android:id="@+id/nav_slideshow" android:icon="@android:drawable/ic_menu_slideshow"-->
        <!--android:title="Slideshow" />-->
        <!--<item android:id="@+id/nav_manage" android:icon="@android:drawable/ic_menu_manage"-->
        <!--android:title="Tools" />-->
    </group>

    <!--<item android:title="Communicate">-->
    <!--<menu>-->
    <!--<item android:id="@+id/nav_share" android:icon="@android:drawable/ic_menu_share"-->
    <!--android:title="Share" />-->
    <!--<item android:id="@+id/nav_send" android:icon="@android:drawable/ic_menu_send"-->
    <!--android:title="Send" />-->
    <!--</menu>-->
    <!--</item>-->

</menu>